# shapeop

./: .clangd  .gitignore  CMakeLists.txt  ReadMe.md  cc  codeium_project_config.json  compile_commands.json  cpp_example.cpp  pch.h  shapeop_reference.h  shapeop_src  tensile_structure.cpp  unary_force.cpp  wind_cloth.cpp
src/: NormalForce.cpp  NormalForce.h
